adjusted style issues on mobile devices

--- a/src/components/styles/Section.css
+++ b/src/components/styles/Section.css
@@ -19,6 +19,7 @@
     
     &.value {
         flex-grow: 1;
+        width: 1px;
     }
     
     &.row {
