--- a/src/components/styles/SectionEditor.css
+++ b/src/components/styles/SectionEditor.css
@@ -152,7 +152,7 @@
 }
 
 @media only screen and (max-width: 600px) and (max-height: 600px) {
-    .sectionMenu-addNewRow {
+    .sectionMenu-addNewRow, #sectionMenu-enableRepeat {
         display: none;
     }
 
